# data-analysis-with-python-pyspark

./: pyproject.toml
ch02_first_data_program/: reading_file.py
levy/cha2/: read_file.py
levy/tabular_data/: tabular_data.ipynb
levy/text_file/: read_file.ipynb  read_file.py
